--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.2.12"
+    "mongoose": "^5.2.12",
+    "moviedb-promise": "^1.2.6"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
