Specificy node version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "rotten-potatoes",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.9.0"
+  },
   "description": "",
   "main": "app.js",
   "scripts": {
